# bids-openminds-demo

./: .gitignore  README.md  bids_openminds_workflow.ipynb  main.py  pyproject.toml
