[project]
name = "bids-openminds-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bids-validator>=1.14.6",
    "bids2openminds>=0.1.1",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "mne-bids>=0.18.0",
    "openminds>=0.5.0",
    "openneuro-py>=2026.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
